# makepad-d3

./: .gitignore  Cargo.toml  README.md
benches/: scale_bench.rs
docs/: MAKEPAD_TEXT_ROTATION.md
examples/chart_zoo/src/: main.rs
examples/chart_zoo/src/charts/: animation.rs  arc_diagram.rs  area_chart.rs  area_variants.rs  axis_renderer.rs  bar_chart.rs  bar_variants.rs  beeswarm.rs  box_plot.rs  bubble_chart.rs  calendar_chart.rs  candlestick.rs  chord_diagram.rs  circle_pack.rs  contour_chart.rs  draw_primitives.rs  edge_bundling.rs  force_graph.rs  globe_map.rs  (+26 more)
src/: error.rs  lib.rs
src/axis/: axis.rs  format.rs  grid.rs  mod.rs  tick.rs
src/color/: blend.rs  cubehelix.rs  hcl.rs  interpolate.rs  lab.rs  mod.rs  scale.rs  types.rs
src/component/: annotation.rs  crosshair.rs  legend.rs  mod.rs  reference_line.rs  tooltip.rs
src/data/: chart_data.rs  dataset.rs  mod.rs  observable.rs  pipeline.rs  point.rs  polling.rs  source.rs  streaming.rs
src/geo/: geojson.rs  mod.rs  path.rs  projection.rs
src/interaction/: brush.rs  mod.rs  tooltip.rs  zoom.rs
src/layout/: mod.rs
src/layout/force/: forces.rs  mod.rs  simulation.rs
src/layout/hierarchy/: mod.rs  node.rs  pack.rs  tree.rs  treemap.rs
src/scale/: band.rs  category.rs  linear.rs  log.rs  mod.rs  point.rs  pow.rs  quantile.rs  quantize.rs  sequential.rs  symlog.rs  threshold.rs  time.rs  traits.rs  utils.rs
src/shape/: arc.rs  area.rs  line.rs  mod.rs  path.rs  pie.rs  stack.rs
src/shape/curve/: basis.rs  cardinal.rs  catmull_rom.rs  linear.rs  mod.rs  monotone.rs  natural.rs  step.rs
